<resources>
    <string name="app_name">NotasDroidAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mensajeSplash">Diseñado por Andres Sanchez Juarez</string>
    <string name="notas_droid">Notas droid</string>
    <string name="imagen">Imagen</string>
    <string name="mensajeBienvenidaMain">Bienvenido usuario</string>
    <string name="CorreoMain">Correo@gmail.com</string>
    <string name="MatriculaMain">Mi matricula</string>
    <string name="ExpedienteMain">Mi expediente</string>
    <string name="ExportarDatos">Exportar datos</string>

    <!-- Strings related to login -->
    <string name="Registrase">Registrarse</string>
    <string name="Iniciar_Sesion">Iniciar Sesion</string>
    <string name="Email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="btnHacerFoto">Hacer foto</string>
    <string name="TextoSplash">App desarrollada por Andres Sanchez Juarez</string>
    <string name="TituloSplash">NotasDroid</string>
    <string name="nombre_usuario_expediente">Nombre</string>
    <string name="curso_Expediente">Curso</string>
    <string name="ciclo_Expediente">Ciclo</string>
    <string name="media_total_Expediente">Media total</string>
    <string name="sistemas_informaticos">Sistemas informáticos</string>
    <string name="programacion">Programación</string>
    <string name="lenguajes_de_marcas">Lenguajes de marcas</string>
    <string name="entornos_de_desarrollo">Entornos de desarrollo</string>
    <string name="formacion_y_orientacion_laboral">Formación y orientación laboral</string>
    <string name="bases_de_datos">Bases de datos</string>
    <string name="ingles_tecnico">Inglés técnico</string>
    <string name="salir">Salir</string>
</resources>